[gd_scene load_steps=3 format=3 uid="uid://c8h54lt7wdl6v"]

[ext_resource type="Script" uid="uid://bmpbtmwdke0ot" path="res://scripts/encounters/campfire.gd" id="1_dr3fi"]
[ext_resource type="Theme" uid="uid://gu54ssij03su" path="res://resources/theme/main_theme.tres" id="1_j6ic1"]

[node name="Campfire" type="Node2D"]
script = ExtResource("1_dr3fi")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -10.0
offset_right = 90.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 20

[node name="ContinueButton" type="Button" parent="."]
visible = false
offset_left = 252.0
offset_top = 144.0
offset_right = 300.0
offset_bottom = 160.0
theme = ExtResource("1_j6ic1")
text = "Continue"

[node name="HealButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 0)
offset_left = 70.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 100.0
theme = ExtResource("1_j6ic1")
theme_override_font_sizes/font_size = 12
text = "Rest"

[node name="RemoveCardButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 170.0
offset_top = 80.0
offset_right = 250.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j6ic1")
theme_override_font_sizes/font_size = 12
text = "Burn Card"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="HealButton" to="." method="_on_heal_button_pressed"]
[connection signal="pressed" from="RemoveCardButton" to="." method="_on_remove_card_button_pressed"]
